--- a/style.css
+++ b/style.css
@@ -223,8 +223,10 @@ body {
 }
 
 .bubble {
+  margin-left: 3%;
+  margin-right: 3%;
   position: relative;
-  width: 100%;
+  width: 94%;
   height: auto;
   aspect-ratio: 1/1;
   border-radius: 50%;
@@ -263,8 +265,8 @@ body {
 
 .smaller {
   position: absolute;
-  width: 25%;
-  height: 18%;
+  width: 24%;
+  height: 16%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -525,6 +527,8 @@ body {
   }
 
   .bubble {
+    margin-left: 0px;
+    margin-right: 0px;
     height: 100%;
     width: auto;
     aspect-ratio: 1;
