--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@ body {
   align-items: center;
   flex-direction: column;
   overflow-y: scroll;
+}
+
+html,body{
   overflow-x: hidden;
-  --dist: 120px;
 }
 
 /* #region font definition*/
