--- a/style.css
+++ b/style.css
@@ -610,7 +610,7 @@ polygon.arrow-top {
 /*Category 1*/
 
 #subbubble1 {
-  background: radial-gradient(circle farthest-side, #a6a7ff, #ffffc5);
+  background: radial-gradient(circle farthest-side, #8284ff, #ffffc5);
 }
 
 #border1 {
