--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-  /*background-color: #ffffc5;*/
-  background-color: #d4115c;
+  background-color: #ffffc5;
   margin: 0;
   display: flex;
   justify-content: center;
